<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="VisionCmd" Id="{21b4baf6-b237-401e-9f17-83555ff930e2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE VisionCmd :
(
	StartSingle := 0,
	StartContinuous := 1,
	StopContinuous := 2,
	ClearValues := 3,
	ClearDataOutputBuffer := 4,
	Reset := 5,
	GetLatestError := 6
);
END_TYPE;
]]></Declaration>
  </DUT>
</TcPlcObject>